welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:7: error: ';' expected but 'if' found.
	} if (( ab == 10 + bc) || ( ab == 10 + ac ) ) {
          ^