welcome.lessons.welcome.bat.bool2.BlueTicket.scala.code
def blueTicket(a:Int, b:Int, c:Int):Int = {
	var ab = a + b 
	var ac = a + c
	var bc = b + c 
	if ( (ab == 10) || ( ac == 10) || ( bc == 10) ) {
		return 10
	} if (( ab == 10 + bc) || ( ab == 10 + ac ) ) {
		return 5
	}else {
		return 0}
}
